updated venv file

--- a/exploratory data analysis.ipynb
+++ b/exploratory data analysis.ipynb
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -226,8 +226,8 @@
     }
    ],
    "source": [
-    "db = pd.read_csv('daibetes.csv')\n",
-    "db"
+    "db_new = pd.read_csv('daibetes.csv')\n",
+    "db_new"
    ]
   },
   {
